modify for compatible with jdk1.8 and jdk9+